# src_platform_cryptd

./: AUTHORS  CHANGELOG  Makefile.in  README-fr.txt  README.md  configure  configure.in
doc/: Makefile.in  doxyfile_html
man/: Makefile.in  crypt_client_black.pod  crypt_client_red.pod  cryptd.pod
scripts/: Makefile.in  crypt_getpass.sh
src/: Makefile.in  ccsd-symbols.txt  ciphertext_client.c  ciphertext_common.c  ciphertext_common.h  ciphertext_server.c  cleanup.h  cleartext_client.c  cleartext_common.c  cleartext_common.h  cleartext_server.c  client_black.c  client_common.c  client_down.c  client_red.c  client_up.c  cmd.c  cmd.h  crypt.c  crypt_ccsd.c  cryptd_black.h  cryptd_common.h  cryptd_features.h  cryptd_files.h  cryptd_red.h  diode.c  dump.c  extcmd.c  files.c  info.c  list.h  log.c  log.h  server.c  server.h
